--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_tutorials
-	base = 385c034
-	trimbase = 
+	base = 03cdef1
+	trimbase = 385c034
 	parent = upstream
 	previous = 393f096
