--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pluginlib_tutorials
-	base = 1e985ae
-	trimbase = 
+	base = 653937e
+	trimbase = 1e985ae
 	parent = upstream
 	previous = 393f096
