--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtle_actionlib
-	base = 0e12598
-	trimbase = 
+	base = f5560cd
+	trimbase = 0e12598
 	parent = upstream
 	previous = 393f096
