--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
-	base = d03fc7a
-	trimbase = 
+	base = a31712f
+	trimbase = d03fc7a
 	parent = upstream
 	previous = 393f096
