--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
 	base = f3fdf25
-	trimbase = 58c1985
+	trimbase = 
 	parent = upstream
 	previous = 5b59bb9
