--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_tutorials
-	base = 9e35f16
-	trimbase = 
+	base = 8d910a2
+	trimbase = 9e35f16
 	parent = upstream
 	previous = 393f096
