--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d910a2
+	base = ff1e313
 	trimbase = 
 	parent = release/kinetic/common_tutorials
-	previous = 
+	previous = 8d910a2
