--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c2bd8b
+	base = d585cc9
 	trimbase = 
 	parent = arch/kinetic/common_tutorials
-	previous = 
+	previous = 2c2bd8b
