--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a31712f
+	base = 84e5e4e
 	trimbase = 
 	parent = release/kinetic/nodelet_tutorial_math
-	previous = 
+	previous = a31712f
