--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cff4f05
+	base = ad6cbf1
 	trimbase = 
 	parent = arch/kinetic/nodelet_tutorial_math
-	previous = 
+	previous = cff4f05
