--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5560cd
+	base = 644aa15
 	trimbase = 
 	parent = release/kinetic/turtle_actionlib
-	previous = 
+	previous = f5560cd
