--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 41bae0b
+	base = af94561
 	trimbase = 
 	parent = arch/kinetic/turtle_actionlib
-	previous = 
+	previous = 41bae0b
