--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 03cdef1
+	base = ac8ecc4
 	trimbase = 
 	parent = release/kinetic/actionlib_tutorials
-	previous = 
+	previous = 03cdef1
