--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2e8cd85
+	base = 161ed98
 	trimbase = 
 	parent = arch/kinetic/actionlib_tutorials
-	previous = 
+	previous = 2e8cd85
