--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 653937e
+	base = 843a7b5
 	trimbase = 
 	parent = release/kinetic/pluginlib_tutorials
-	previous = 
+	previous = 653937e
