--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a19f5ac
+	base = ea42369
 	trimbase = 
 	parent = arch/kinetic/pluginlib_tutorials
-	previous = 
+	previous = a19f5ac
