--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_tutorials
-	base = 3480f1f
-	trimbase = 
+	base = 1a1ab0a
+	trimbase = 3480f1f
 	parent = upstream
 	previous = 393f096
