--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pluginlib_tutorials
-	base = be5d7d7
-	trimbase = 
+	base = 085e027
+	trimbase = be5d7d7
 	parent = upstream
 	previous = 393f096
