--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtle_actionlib
-	base = d37a8be
-	trimbase = 
+	base = 68fa94c
+	trimbase = d37a8be
 	parent = upstream
 	previous = 393f096
