--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
 	base = 2c8798c
-	trimbase = 30977de
+	trimbase = 
 	parent = upstream
 	previous = 5b59bb9
