--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
-	base = 962d395
-	trimbase = 
+	base = 6c6aee1
+	trimbase = 962d395
 	parent = upstream
 	previous = 393f096
