--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_tutorials
-	base = a3640dd
-	trimbase = 
+	base = 94f51e7
+	trimbase = a3640dd
 	parent = upstream
 	previous = 393f096
