--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94f51e7
+	base = 09b9e2a
 	trimbase = 
 	parent = release/lunar/common_tutorials
-	previous = 
+	previous = 94f51e7
