--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f478cf2
+	base = 7d6e57d
 	trimbase = 
 	parent = arch/lunar/common_tutorials
-	previous = 
+	previous = f478cf2
