--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a1ab0a
+	base = e95dde3
 	trimbase = 
 	parent = release/lunar/actionlib_tutorials
-	previous = 
+	previous = 1a1ab0a
