--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 75330e4
+	base = f2c55f1
 	trimbase = 
 	parent = arch/lunar/actionlib_tutorials
-	previous = 
+	previous = 75330e4
