--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 68fa94c
+	base = 4da39cf
 	trimbase = 
 	parent = release/lunar/turtle_actionlib
-	previous = 
+	previous = 68fa94c
