--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 12df1b5
+	base = 7525173
 	trimbase = 
 	parent = arch/lunar/turtle_actionlib
-	previous = 
+	previous = 12df1b5
