--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 085e027
+	base = 0929a02
 	trimbase = 
 	parent = release/lunar/pluginlib_tutorials
-	previous = 
+	previous = 085e027
