--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a846cd
+	base = c6a873a
 	trimbase = 
 	parent = arch/lunar/pluginlib_tutorials
-	previous = 
+	previous = 5a846cd
