--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c6aee1
+	base = 31c97a5
 	trimbase = 
 	parent = release/lunar/nodelet_tutorial_math
-	previous = 
+	previous = 6c6aee1
