--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8339710
+	base = b351acd
 	trimbase = 
 	parent = arch/lunar/nodelet_tutorial_math
-	previous = 
+	previous = 8339710
