--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_tutorials
-	base = 7538e5c
-	trimbase = 
+	base = ed189fe
+	trimbase = 7538e5c
 	parent = upstream
 	previous = a2d9462
