--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pluginlib_tutorials
-	base = 6c51798
-	trimbase = 
+	base = f66a457
+	trimbase = 6c51798
 	parent = upstream
 	previous = a2d9462
