--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtle_actionlib
-	base = 5cd7d32
-	trimbase = 
+	base = 62d5c6c
+	trimbase = 5cd7d32
 	parent = upstream
 	previous = a2d9462
