--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
 	base = 86a8b75
-	trimbase = 5661b24
+	trimbase = 
 	parent = upstream
 	previous = 3111756
