--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nodelet_tutorial_math
-	base = 5d187ae
-	trimbase = 
+	base = 747ead1
+	trimbase = 5d187ae
 	parent = upstream
 	previous = a2d9462
