--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_tutorials
-	base = 7562ebd
-	trimbase = 
+	base = 90bc20c
+	trimbase = 7562ebd
 	parent = upstream
 	previous = a2d9462
