--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 747ead1
+	base = 54a5680
 	trimbase = 
 	parent = release/melodic/nodelet_tutorial_math
-	previous = 
+	previous = 747ead1
