--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 127d008
+	base = f37ee62
 	trimbase = 
 	parent = arch/melodic/nodelet_tutorial_math
-	previous = 
+	previous = 127d008
