--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 62d5c6c
+	base = 19c40f7
 	trimbase = 
 	parent = release/melodic/turtle_actionlib
-	previous = 
+	previous = 62d5c6c
