--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d9ff7d
+	base = 6b72345
 	trimbase = 
 	parent = arch/melodic/turtle_actionlib
-	previous = 
+	previous = 3d9ff7d
