--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed189fe
+	base = fcc5579
 	trimbase = 
 	parent = release/melodic/actionlib_tutorials
-	previous = 
+	previous = ed189fe
