--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0cd436
+	base = df8278f
 	trimbase = 
 	parent = arch/melodic/actionlib_tutorials
-	previous = 
+	previous = b0cd436
