--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f66a457
+	base = 8b39f63
 	trimbase = 
 	parent = release/melodic/pluginlib_tutorials
-	previous = 
+	previous = f66a457
