--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9397dd4
+	base = b04f121
 	trimbase = 
 	parent = arch/melodic/pluginlib_tutorials
-	previous = 
+	previous = 9397dd4
