--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90bc20c
+	base = 5de3352
 	trimbase = 
 	parent = release/melodic/common_tutorials
-	previous = 
+	previous = 90bc20c
