--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5962305
+	base = 5cb673e
 	trimbase = 
 	parent = arch/melodic/common_tutorials
-	previous = 
+	previous = 5962305
